# aws-ingestion

./: .gitignore  CLAUDE.md  README.md  docker-compose.yaml  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: main.yml
1-batch-ingestion-full-vs-incremental/analysis/output/: correctness.md
1-batch-ingestion-full-vs-incremental/data/: create_tables.sql  seed_tables.py
1-batch-ingestion-full-vs-incremental/glue/: metrics.py
1-batch-ingestion-full-vs-incremental/scripts/: s3_tree.py
1-batch-ingestion-full-vs-incremental/terraform/: 1-main.tf  4-rds.tf  variables.tf
2-cdc-dms/: dms_io.py
2-cdc-dms/analysis/: analysis.py
2-cdc-dms/data/: create_table.sql  seed_table.py  simulate_stress.py
2-cdc-dms/glue/: reconstruct.py  simulate_oltp.py
2-cdc-dms/scripts/: inspect_dms_output.py  validate_reconstruction.py
analysis/: analysis.py
analysis/output/: cost.md  cost_per_run.csv  performance.md
data/: reset_pipeline.py  seed_tables.py  simulate_changes.py
docs/superpowers/plans/: 2026-04-15-cdc-dms.md
glue/: full_load.py  incremental_load.py  metrics.py  simulate_changes.py
terraform/: 1-main.tf  2-vpc.tf  3-security-groups.tf  4-rds.tf  5-s3.tf  6-iam.tf  7-glue.tf
