[project]
name = "aws-ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.83",
    "botocore[crt]>=1.42.83",
    "dotenv>=0.9.9",
    "duckdb>=1.5.1",
    "faker>=40.11.1",
    "faker-commerce>=1.0.4",
    "matplotlib>=3.10.8",
    "psycopg2>=2.9.11",
    "pyarrow>=23.0.1",
    "seaborn>=0.13.2",
    "tabulate>=0.10.0",
]

[dependency-groups]
dev = [
    "ipython>=9.12.0",
    "jupyter>=1.1.1",
    "pandas>=3.0.2",
]
